Fixes to better naming convention

--- a/atelier_details.html
+++ b/atelier_details.html
@@ -87,7 +87,7 @@ Numéro D'Étudiant : 300272916
                 const atelierDetails = {
                     name: 'Hotel',
                     description: 'Provides lodging, often with additional amenities like restaurants, bars, and pools.',
-                    imageURL: 'Pictures/hotel.jpeg' 
+                    imageURL: 'Pictures/Hotel.jpeg' 
                 };
                 updateAtelierDetails(atelierDetails);
 
@@ -102,7 +102,7 @@ Numéro D'Étudiant : 300272916
         }
     </script>
 
-    
+
                 <!--    FOOTER   -->
     <footer class="container-fluid bg-orange text-white py-3 text-center">
         <p>&copy; 2024 Passport to Flavor</p>
