--- a/expert_details.html
+++ b/expert_details.html
@@ -57,58 +57,58 @@ Numéro D'Étudiant : 300272916
                 document.getElementById('chefImage').src = chefDetails.imageURL;
             }
 
-            if (chef === 'John_Doe') {
+            if (chef === 'Albert_Shorts') {
                 const chefDetails = {
                     name: 'Chef Albert Shorts',
                     experience: '15 years',
                     age: '40',
                     cuisines: 'Italian, Mediterranean',
                     description: 'Passionate chef with over 15 years of experience in Italian, French, and Mediterranean cuisines.',
-                    imageURL: 'Pictures/chef_john_doe.jpeg'
+                    imageURL: 'Pictures/chef_Albert_Shorts.jpeg'
                 };
                 updateChefDetails(chefDetails);
 
-            } else if (chef === 'Jane_Smith') {
+            } else if (chef === 'Jane_Wills') {
                 const chefDetails = {
                     name: 'Chef Jane Wills',
                     experience: '12 years',
                     age: '35',
                     cuisines: 'Asian Fusion',
                     description: 'Experienced chef specializing in Asian fusion cuisine with a creative flair.',
-                    imageURL: 'Pictures/chef_jane_smith.jpeg'
+                    imageURL: 'Pictures/chef_Jane_Wills.jpeg'
                 };
                 updateChefDetails(chefDetails);
 
-            } else if (chef === 'Michael_Johnson') {
+            } else if (chef === 'Michael_Loutser') {
                 const chefDetails = {
                     name: 'Chef Michael Loutser',
                     experience: '20 years',
                     age: '45',
                     cuisines: 'American, Southern',
                     description: 'Versatile chef with expertise in classic American comfort food and Southern cuisine.',
-                    imageURL: 'Pictures/chef_michael_johnson.avif',
+                    imageURL: 'Pictures/chef_Michael_Loutser.avif',
                 };
                 updateChefDetails(chefDetails);
 
-            } else if (chef === 'Emily_Wilson') {
+            } else if (chef === 'Emily_Bladter') {
                 const chefDetails = {
                     name: 'Chef Emily Bladter',
                     experience: '18 years',
                     age: '38',
                     cuisines: 'Modern European',
                     description: 'Creative chef specializing in modern European cuisine with a focus on seasonal ingredients.',
-                    imageURL: 'Pictures/chef_emily_wilson.png'
+                    imageURL: 'Pictures/chef_Emily_Bladter.png'
                 };
                 updateChefDetails(chefDetails);
 
-            } else if (chef === 'David_Brown') {
+            } else if (chef === 'Tia_Elkesserwani') {
                 const chefDetails = {
                     name: 'Chef Tia Elkesserwani',
                     experience: '14 years',
                     age: '42',
                     cuisines: 'Mediterranean, Canadian',
                     description: 'Innovative chef known for her Mediterranean food and her skills in traditional Canadian food.',
-                    imageURL: 'Pictures/chef_david_brown.jpeg'
+                    imageURL: 'Pictures/chef_Tia_Elkesserwani.jpeg'
                 };
                 updateChefDetails(chefDetails);
 
