--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ Numéro D'Étudiant : 300272916
                     <div class="card expert-card">
                         <div class="card-body">
                             <h5 class="card-title">Chef Albert Shorts</h5>
-                            <img src="Pictures/chef_john_doe.jpeg" alt="Chef John Doe" class="img-fluid mb-3">  <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vecteezy.com%2Fvector-art%2F7786819-chef-or-cook-in-simple-flat-vector-personal-profile-icon-or-symbol-people-concept-vector-illustration&psig=AOvVaw03lDZ3bFpfXzBVVfqLCmUo&ust=1717551111311000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCX1tHmwIYDFQAAAAAdAAAAABAd-->
+                            <img src="Pictures/chef_Albert_Shorts.jpeg" alt="Chef Albert Shorts" class="img-fluid mb-3">  <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vecteezy.com%2Fvector-art%2F7786819-chef-or-cook-in-simple-flat-vector-personal-profile-icon-or-symbol-people-concept-vector-illustration&psig=AOvVaw03lDZ3bFpfXzBVVfqLCmUo&ust=1717551111311000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCX1tHmwIYDFQAAAAAdAAAAABAd-->
                             <p class="card-text">Passionate chef with over 15 years of experience in Italian, and Mediterranean cuisines.</p>
-                            <a href="expert_details.html?chef=John_Doe" class="btn btn-primary">Read More</a>
+                            <a href="expert_details.html?chef=Albert_Shorts" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -134,9 +134,9 @@ Numéro D'Étudiant : 300272916
                     <div class="card expert-card">
                         <div class="card-body">
                             <h5 class="card-title">Chef Jane Wills</h5>
-                            <img src="Pictures/chef_jane_smith.jpeg" alt="Chef Jane Smith" class="img-fluid mb-3">
+                            <img src="Pictures/chef_Jane_Wills.jpeg" alt="Chef Jane Wills" class="img-fluid mb-3">
                             <p class="card-text">Experienced chef specializing in Asian fusion cuisine with a creative flair.</p>
-                            <a href="expert_details.html?chef=Jane_Smith" class="btn btn-primary">Read More</a>
+                            <a href="expert_details.html?chef=Jane_Wills" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -144,9 +144,9 @@ Numéro D'Étudiant : 300272916
                     <div class="card expert-card">
                         <div class="card-body">
                             <h5 class="card-title">Chef Michael Loutser</h5>
-                            <img src="Pictures/chef_michael_johnson.avif" alt="Chef Michael Johnson" class="img-fluid mb-3">
+                            <img src="Pictures/chef_Michael_Loutser.avif" alt="Chef Michael Loutser" class="img-fluid mb-3">
                             <p class="card-text">Versatile chef with expertise in classic American comfort food and Southern cuisine.</p>
-                            <a href="expert_details.html?chef=Michael_Johnson" class="btn btn-primary">Read More</a>
+                            <a href="expert_details.html?chef=Michael_Loutser" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -154,9 +154,9 @@ Numéro D'Étudiant : 300272916
                     <div class="card expert-card">
                         <div class="card-body">
                             <h5 class="card-title">Chef Emily Bladter</h5>
-                            <img src="Pictures/chef_emily_wilson.png" alt="Chef Emily Wilson" class="img-fluid mb-3">
+                            <img src="Pictures/chef_Emily_Bladter.png" alt="Chef Emily Bladter" class="img-fluid mb-3">
                             <p class="card-text">Creative chef specializing in modern European cuisine with a focus on seasonal ingredients.</p>
-                            <a href="expert_details.html?chef=Emily_Wilson" class="btn btn-primary">Read More</a>
+                            <a href="expert_details.html?chef=Emily_Bladter" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -164,9 +164,9 @@ Numéro D'Étudiant : 300272916
                     <div class="card expert-card">
                         <div class="card-body">
                             <h5 class="card-title">Chef Tia Elkesserwani</h5>
-                            <img src="Pictures/chef_david_brown.jpeg" alt="Chef David Brown" class="img-fluid mb-3">
+                            <img src="Pictures/chef_Tia_Elkesserwani.jpeg" alt="Chef Tia Elkesserwani" class="img-fluid mb-3">
                             <p class="card-text">Innovative chef known for her mediterranean food and his skills in traditional canadian food.</p>
-                            <a href="expert_details.html?chef=David_Brown" class="btn btn-primary">Read More</a>
+                            <a href="expert_details.html?chef=Tia_Elkesserwani" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
