fixes for images and centering

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Numéro D'Étudiant : 300272916
                     <div class="card expert-card">
                         <div class="card-body">
                             <h5 class="card-title">Chef Albert Shorts</h5>
-                            <img src="Pictures/chef_Albert_Shorts.jpeg" alt="Chef Albert Shorts" class="img-fluid mb-3">  <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vecteezy.com%2Fvector-art%2F7786819-chef-or-cook-in-simple-flat-vector-personal-profile-icon-or-symbol-people-concept-vector-illustration&psig=AOvVaw03lDZ3bFpfXzBVVfqLCmUo&ust=1717551111311000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCX1tHmwIYDFQAAAAAdAAAAABAd-->
+                            <img src="Pictures/chef_Albert_Shorts.jpeg" alt="Chef Albert Shorts" class="img-fluid mb-3 chef-img">  <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vecteezy.com%2Fvector-art%2F7786819-chef-or-cook-in-simple-flat-vector-personal-profile-icon-or-symbol-people-concept-vector-illustration&psig=AOvVaw03lDZ3bFpfXzBVVfqLCmUo&ust=1717551111311000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCX1tHmwIYDFQAAAAAdAAAAABAd-->
                             <p class="card-text">Passionate chef with over 15 years of experience in Italian, and Mediterranean cuisines.</p>
                             <a href="expert_details.html?chef=Albert_Shorts" class="btn btn-primary">Read More</a>
                         </div>
@@ -134,7 +134,7 @@ Numéro D'Étudiant : 300272916
                     <div class="card expert-card">
                         <div class="card-body">
                             <h5 class="card-title">Chef Jane Wills</h5>
-                            <img src="Pictures/chef_Jane_Wills.jpeg" alt="Chef Jane Wills" class="img-fluid mb-3">
+                            <img src="Pictures/chef_Jane_Wills.jpeg" alt="Chef Jane Wills" class="img-fluid mb-3 chef-img">
                             <p class="card-text">Experienced chef specializing in Asian fusion cuisine with a creative flair.</p>
                             <a href="expert_details.html?chef=Jane_Wills" class="btn btn-primary">Read More</a>
                         </div>
@@ -144,7 +144,7 @@ Numéro D'Étudiant : 300272916
                     <div class="card expert-card">
                         <div class="card-body">
                             <h5 class="card-title">Chef Michael Loutser</h5>
-                            <img src="Pictures/chef_Michael_Loutser.avif" alt="Chef Michael Loutser" class="img-fluid mb-3">
+                            <img src="Pictures/chef_Michael_Loutser.avif" alt="Chef Michael Loutser" class="img-fluid mb-3 chef-img">
                             <p class="card-text">Versatile chef with expertise in classic American comfort food and Southern cuisine.</p>
                             <a href="expert_details.html?chef=Michael_Loutser" class="btn btn-primary">Read More</a>
                         </div>
@@ -154,7 +154,7 @@ Numéro D'Étudiant : 300272916
                     <div class="card expert-card">
                         <div class="card-body">
                             <h5 class="card-title">Chef Emily Bladter</h5>
-                            <img src="Pictures/chef_Emily_Bladter.png" alt="Chef Emily Bladter" class="img-fluid mb-3">
+                            <img src="Pictures/chef_Emily_Bladter.png" alt="Chef Emily Bladter" class="img-fluid mb-3 chef-img">
                             <p class="card-text">Creative chef specializing in modern European cuisine with a focus on seasonal ingredients.</p>
                             <a href="expert_details.html?chef=Emily_Bladter" class="btn btn-primary">Read More</a>
                         </div>
@@ -164,7 +164,7 @@ Numéro D'Étudiant : 300272916
                     <div class="card expert-card">
                         <div class="card-body">
                             <h5 class="card-title">Chef Tia Elkesserwani</h5>
-                            <img src="Pictures/chef_Tia_Elkesserwani.jpeg" alt="Chef Tia Elkesserwani" class="img-fluid mb-3">
+                            <img src="Pictures/chef_Tia_Elkesserwani.jpeg" alt="Chef Tia Elkesserwani" class="img-fluid mb-3 chef-img">
                             <p class="card-text">Innovative chef known for her mediterranean food and his skills in traditional canadian food.</p>
                             <a href="expert_details.html?chef=Tia_Elkesserwani" class="btn btn-primary">Read More</a>
                         </div>
@@ -174,7 +174,7 @@ Numéro D'Étudiant : 300272916
                     <div class="card expert-card">
                         <div class="card-body">
                             <h5 class="card-title">Chef Mcdonald Mcdonald</h5>
-                            <img src="Pictures/chef_mcdonald_mcdonald.jpeg" alt="Chef Mcdoanld Mcdonald" class="img-fluid mb-3">
+                            <img src="Pictures/chef_mcdonald_mcdonald.jpeg" alt="Chef Mcdoanld Mcdonald" class="img-fluid mb-3 chef-img">
                             <p class="card-text">Seamlessly blends the bold flavors of Thailand with the delicate nuances of Japanese culinary traditions.</p>
                             <a href="expert_details.html?chef=Mcdonald_Mcdonald" class="btn btn-primary">Read More</a>
                         </div>
@@ -248,12 +248,12 @@ Numéro D'Étudiant : 300272916
         <section id="ateliers" class="container py-5">
             <h2 class="text-center mb-4">Check Out Our Ateliers</h2>
             <p class="text-center mb-4"> You may choose to pick your own location which then please select the other option for ateliers. </p>
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <div class="card atelier-card">
-                        <div class="card-body">
+                <div class="row">
+                    <div class="col-md-4 mb-4">
+                        <div class="card atelier-card">
+                            <div class="card-body">
                             <h5 class="card-title">Ball Room</h5>
-                            <img src="Pictures/ball_room.jpeg" alt="Ball Room" class="img-fluid mb-3">  
+                            <img src="Pictures/ball_room.jpeg" alt="Ball Room" class="img-fluid mb-3 atelier-img">  
                             <p class="card-text">Ballrooms offer ample space and elegant ambiance, ideal for large gatherings and formal events. Their adaptable layouts can accommodate various seating arrangements and entertainment options, while built-in features like sound systems and lighting simplify setup for caterers.</p>
                             <a href="atelier_details.html?atelier=Ball_Room" class="btn btn-primary">Read More</a>
                         </div>
@@ -262,54 +262,55 @@ Numéro D'Étudiant : 300272916
                 <div class="col-md-4 mb-4">
                     <div class="card atelier-card">
                         <div class="card-body">
-                            <h5 class="card-title">Restaurant</h5>
-                            <img src="Pictures/restaurant.jpeg" alt="Restaurant" class="img-fluid mb-3">  
-                            <p class="card-text">Offers a wide range of prepared food and drinks, often with a specific cuisine or theme.</p>
-                            <a href="atelier_details.html?atelier=restaurant" class="btn btn-primary">Read More</a>
+                        <h5 class="card-title">Restaurant</h5>
+                        <img src="Pictures/restaurant.jpeg" alt="Restaurant" class="img-fluid mb-3 atelier-img">  
+                        <p class="card-text">Offers a wide range of prepared food and drinks, often with a specific cuisine or theme.</p>
+                        <a href="atelier_details.html?atelier=restaurant" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card atelier-card">
                         <div class="card-body">
-                            <h5 class="card-title">Bar</h5>
-                            <img src="Pictures/bar.jpeg" alt="Bar" class="img-fluid mb-3">  
-                            <p class="card-text">Primarily serves alcoholic beverages, sometimes accompanied by light snacks or live music.</p>
-                            <a href="atelier_details.html?atelier=bar" class="btn btn-primary">Read More</a>
+                        <h5 class="card-title">Bar</h5>
+                        <img src="Pictures/bar.jpeg" alt="Bar" class="img-fluid mb-3 atelier-img">  
+                        <p class="card-text">Primarily serves alcoholic beverages, sometimes accompanied by light snacks or live music.</p>
+                        <a href="atelier_details.html?atelier=bar" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card atelier-card">
                         <div class="card-body">
-                            <h5 class="card-title">Cafe</h5>
-                            <img src="Pictures/cafe.jpeg" alt="Cafe" class="img-fluid mb-3">  
-                            <p class="card-text">Casual establishment focused on coffee, tea, and pastries, often with a relaxed atmosphere.</p>
-                            <a href="atelier_details.html?atelier=cafe" class="btn btn-primary">Read More</a>
+                        <h5 class="card-title">Cafe</h5>
+                        <img src="Pictures/cafe.jpeg" alt="Cafe" class="img-fluid mb-3 atelier-img">  
+                        <p class="card-text">Casual establishment focused on coffee, tea, and pastries, often with a relaxed atmosphere.</p>
+                        <a href="atelier_details.html?atelier=cafe" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card atelier-card">
                         <div class="card-body">
-                            <h5 class="card-title">Hotel</h5>
-                            <img src="Pictures/Hotel.jpeg" alt="hotel" class="img-fluid mb-3">  
-                            <p class="card-text">Provides lodging, often with additional amenities like restaurants, bars, and pools.</p>
-                            <a href="atelier_details.html?atelier=hotel" class="btn btn-primary">Read More</a>
+                        <h5 class="card-title">Hotel</h5>
+                        <img src="Pictures/Hotel.jpeg" alt="hotel" class="img-fluid mb-3 atelier-img">  
+                        <p class="card-text">Provides lodging, often with additional amenities like restaurants, bars, and pools.</p>
+                        <a href="atelier_details.html?atelier=hotel" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card atelier-card">
                         <div class="card-body">
-                            <h5 class="card-title">Theater</h5>
-                            <img src="Pictures/theater.jpeg" alt="Theater" class="img-fluid mb-3">  
-                            <p class="card-text">Venue for live performances, such as plays, musicals, concerts, or stand-up comedy.                            </p>
-                            <a href="atelier_details.html?atelier=theater" class="btn btn-primary">Read More</a>
+                        <h5 class="card-title">Theater</h5>
+                        <img src="Pictures/theater.jpeg" alt="Theater" class="img-fluid mb-3 atelier-img">  
+                        <p class="card-text">Venue for live performances, such as plays, musicals, concerts, or stand-up comedy.</p>
+                        <a href="atelier_details.html?atelier=theater" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
-        </section>     
+        </section>
+
 
 
 
