--- a/index.html
+++ b/index.html
@@ -80,32 +80,32 @@ Numéro D'Étudiant : 300272916
             <p class="text-center">Please find below certain ideas of food and cuisines our chefs have made</p>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="Pictures/shawarma.jpeg" alt="Moroccan Tagine" class="img-fluid">
+                    <img src="Pictures/shawarma.jpeg" alt="Moroccan Tagine" class="img-fluid food-img">
                     <h3>Shawarma</h3>
                     <p>Shawarma is a popular Middle Eastern street food made of thinly sliced marinated meat (often chicken or beef) cooked on a vertical rotisserie. It's typically served in a pita bread wrap with vegetables, pickles, and tahini sauce.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="Pictures/indian-curry.jpeg" alt="Indian Curry" class="img-fluid">
+                    <img src="Pictures/indian-curry.jpeg" alt="Indian Curry" class="img-fluid food-img">
                     <h3>Indian Curry</h3>
                     <p>A rich and flavorful curry featuring aromatic spices, creamy coconut milk, and your choice of tender chicken, lamb, or vegetables.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="Pictures/italian-pasta.jpeg" alt="Italian Pasta" class="img-fluid">
+                    <img src="Pictures/italian-pasta.jpeg" alt="Italian Pasta" class="img-fluid food-img">
                     <h3>Italian Pasta</h3>
                     <p>Freshly made pasta with your choice of classic sauces, from creamy pesto to hearty Bolognese, all crafted with authentic Italian ingredients.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="Pictures/general-tao.jpeg" alt="General Tao" class="img-fluid">
+                    <img src="Pictures/general-tao.jpeg" alt="General Tao" class="img-fluid food-img">
                     <h3>General Tao</h3>
                     <p>General Tao chicken is a popular Chinese-American dish consisting of crispy fried chicken pieces coated in a sweet and slightly spicy sauce, often made with soy sauce, ginger, garlic, and chili peppers.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="Pictures/Burger.jpeg" alt="Burger" class="img-fluid">
+                    <img src="Pictures/Burger.jpeg" alt="Burger" class="img-fluid food-img">
                     <h3>Burger</h3>
                     <p>A burger is a sandwich made of a cooked patty of ground meat (usually beef) placed inside a sliced bun or bread roll.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="Pictures/Tacos.jpeg" alt="Tacos" class="img-fluid">
+                    <img src="Pictures/Tacos.jpeg" alt="Tacos" class="img-fluid food-img">
                     <h3>Tacos</h3>
                     <p>Tacos are a popular Mexican dish consisting of a tortilla (corn or flour) filled with various ingredients, such as meat, beans, cheese, vegetables, and salsa.</p>
                 </div>
