--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Numéro D'Étudiant : 300272916
                         <div class="card-body">
                             <h5 class="card-title">Chef Tia Elkesserwani</h5>
                             <img src="Pictures/chef_Tia_Elkesserwani.jpeg" alt="Chef Tia Elkesserwani" class="img-fluid mb-3 chef-img">
-                            <p class="card-text">Innovative chef known for her mediterranean food and his skills in traditional canadian food.</p>
+                            <p class="card-text">Innovative chef known for her mediterranean food and her skills in traditional canadian food.</p>
                             <a href="expert_details.html?chef=Tia_Elkesserwani" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
@@ -247,7 +247,7 @@ Numéro D'Étudiant : 300272916
                         <!--       Ateliers       -->
         <section id="ateliers" class="container py-5">
             <h2 class="text-center mb-4">Check Out Our Ateliers</h2>
-            <p class="text-center mb-4"> You may choose to pick your own location which then please select the other option for ateliers. </p>
+            <p class="text-center mb-4"> If you choose to pick your own location then please select the "Other" option for ateliers. </p>
                 <div class="row">
                     <div class="col-md-4 mb-4">
                         <div class="card atelier-card">
