--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ Numéro D'Étudiant : 300272916
                         <input type="number" id="people" class="form-control" required>
                     </div>
                     <div class="mb-3">
-                        <label for="menu" class="form-label">Menu Restrictions:</label>
+                        <label for="menu" class="form-label">Menu Restrictions (Food Allergies/Dietary Restrictions):</label>
                         <input type="menu" id="menu" class="form-control" required>
                     </div>
                     <button type="button" class="btn btn-primary" onclick="submitBookingForm()">Submit</button>
