--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@ Numéro D'Étudiant : 300272916
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About Us</a>
-                    </li>
+                    </li>S
                     <li class="nav-item">
                         <a class="nav-link" href="#food">Our Food</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#chefs">Our chefs</a>
+                        <a class="nav-link" href="#chefs">Our Chefs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#services">Our Services</a>
