--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ Numéro D'Étudiant : 300272916
                                 <!--       Food       -->
         <section id="food" class="container py-5">
             <h2 class="text-center">Our Food</h2>
-            <p class="text-center">Please find below certain ideas of food and cuisines our chefs have made</p>
+            <p class="text-center">Please find below certain ideas of food and cuisines our chefs have made.</p>
+            <p class="text-center">Please note, for menu restrictions please fill in the section of the booking form with all dietary and allergy restrictions. Also once a chef has contatced you, you will be able to discuss the final menu.</p>
             <div class="row">
                 <div class="col-md-4">
                     <img src="Pictures/shawarma.jpeg" alt="Moroccan Tagine" class="img-fluid food-img">
